# provide

./: .dev.vars.example  .dockerignore  .env.example  .gitignore  .npmrc  CLAUDE.md  Dockerfile  Dockerfile.web  INDICATOR_CATALOG_IXMP4_DESIGN.md  INDICATOR_CATALOG_SQLITE_DESIGN.md  README.md  TECHNICAL_IMPLEMENTATION_PLAN.md  TECHNICAL_PLAN.md  bun.lockb  bunfig.toml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  package-lock.json  package.json  server.ts  svelte.config.js  tailwind.config.cjs  worker.js  worker.ts  wrangler.jsonc
api/: conventions.test.ts  conventions.ts  index.test.ts  index.ts  instances.json  instances.ts  ixmp4.test.ts  ixmp4.ts  platform.test.ts  platform.ts  tabulate.test.ts  tabulate.ts  test-helpers.test.ts  test-helpers.ts  test-setup.ts  types.ts  util.test.ts  util.ts
cms/: .dockerignore  .env.example  Dockerfile  README.md  fly.toml  package.json
pipeline/: .gitignore  README.md  manifest.example.yaml  pyproject.toml
pipeline/.devcontainer/: Dockerfile  devcontainer.json
pipeline/data/: countries.geojson  geographies.csv
pipeline/data/mesmer/: CurPol.nc  GS.nc  SP.nc
pipeline/src/provide_pipeline/: __init__.py  check.py  cli.py  config.py  core.py  impact_geo.py  impact_time.py  io.py  legacy.py  manifest.py  masks.py  pipeline.py  publish.py  synthetic.py  unavoidable_risk.py  validate.py
pipeline/tests/: conftest.py  test_bundled_data.py  test_end_to_end.py  test_impact_geo.py  test_impact_time.py  test_legacy.py  test_masks.py  test_unavoidable_risk.py  test_validate.py  test_workflow_cli.py
(+861 files in other folders)
