[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "provide-pipeline"
version = "0.1.0"
description = "Modern xarray/regionmask reimplementation of the PROVIDE climate-impact processing scripts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-3.0-or-later" }
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2024.1",
    "regionmask>=0.12",          # provides mask_3D_frac_approx
    "geopandas>=0.14",
    "shapely>=2.0",
    "scipy>=1.10",
    "netcdf4>=1.6",
    "h5netcdf>=1.2",
    "dask>=2024.1",
    "pyyaml>=6.0",               # run-all manifests
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[project.scripts]
provide-pipeline = "provide_pipeline.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
